# sbx

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  make_dmc.py  pyproject.toml  recurrent_buffer.ipynb  setup.cfg  setup.py  test.ipynb  test.py  train.py  train_torch.py
.github/workflows/: ci.yml
sbx/: __init__.py
sbx/bro/: __init__.py  bro.py  policies.py
sbx/common/: distributions.py  feature_extractors.py  jax_layers.py  off_policy_algorithm.py  on_policy_algorithm.py  policies.py  prioritized_replay_buffer.py  recurrent.py  rerun_logging.py  simbav2_layers.py  type_aliases.py  utils.py
sbx/crossq/: __init__.py  batch_renorm.py  crossq.py  policies.py
sbx/ddpg/: __init__.py  ddpg.py
sbx/dqn/: __init__.py  dqn.py  policies.py
sbx/droq/: __init__.py  droq.py
sbx/droq_sac/: __init__.py  droq.py
sbx/per_dqn/: __init__.py  per_dqn.py
sbx/ppo/: __init__.py  policies.py  ppo.py
sbx/r_ppo/: __init__.py  policies.py  r_ppo.py
sbx/recurrent_ppo/: __init__.py  policies.py  recurrent_ppo.py
sbx/sac/: __init__.py  policies.py  sac.py
sbx/sac7/: __init__.py  policies.py  sac7.py
sbx/sample_dqn/: __init__.py  policies.py  sample_dqn.py
sbx/td3/: __init__.py  policies.py  td3.py
sbx/tqc/: __init__.py  policies.py  tqc.py
sbx/tqcrossq/: __init__.py  policies.py  tqcrossq.py
scripts/: run_tests.sh  test_bro.py
scripts/dmc/: acrobot.sh  cheetah.sh  dog_run.sh  dog_stand.sh  dog_trot.sh  dog_walk.sh  finger.sh  fish.sh  hopper.sh  humanoid_run.sh  humanoid_stand.sh  (+4 more)
tests/: test_buffers.py  test_cnn.py  test_dict_env.py  test_flatten.py  test_ppo.py  test_run.py  test_spaces.py
(+5 files in other folders)
